get menu endpoint
